# Graph

./: .gitignore  CMakeLists.txt  README.md
include/: graph.hpp  iterator.hpp  table.hpp
src/: main.cpp
tests/: CMakeLists.txt
tests/end2end/: checker.cpp  test_runner.sh
tests/end2end/include/: end2end.hpp
tests/end2end/src/: main.cpp
tests/end2end/static_tests/big/answers/: ans10.txt  ans6.txt  ans7.txt  ans8.txt
tests/end2end/static_tests/big/tests/: test1.txt  test2.txt  test3.txt  test6.txt  test7.txt  test9.txt
tests/end2end/static_tests/large/answers/: ans1.txt  ans2.txt  ans3.txt  ans4.txt  ans5.txt
tests/end2end/static_tests/large/tests/: test3.txt  test5.txt
tests/end2end/static_tests/not_bipartite/answers/: ans1.txt  ans2.txt  ans3.txt  ans4.txt  ans5.txt
tests/end2end/static_tests/not_bipartite/tests/: test2.txt  test3.txt  test4.txt  test5.txt
tests/end2end/static_tests/small/answers/: ans1.txt  ans2.txt  ans3.txt  ans4.txt  ans5.txt  ans9.txt
tests/end2end/static_tests/small/tests/: test10.txt  test4.txt  test5.txt  test8.txt
